--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,6 +7,15 @@
   </head>
   <body>
     <div class="container">
+      <div>
+        <ul>
+          <% @questions.each do |question|%>
+          <li>
+            <%= question.question_text %>
+          </li>
+          <% end %>
+        </ul>
+      </div>
 
 
 
