--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,6 +4,36 @@
     <title>Questions for Quest. Ons</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Questions for Quest. Ons</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Create User</a></li>
+        <li class="dropdown">
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
   </head>
   <body>
     <div class="container">
@@ -11,13 +41,13 @@
         <ul>
           <% @questions.each do |question|%>
           <li>
-            
             <%= question.question_text %>
-            <form action="/stuff" method="post">
-            <input >
-            A) <%= question.choice_a %>
-            B) <%= question.choice_b %>
-          </form>
+            <form action="/submit" method="post">
+              <input type="hidden" name="Question_id" value=<%= question.id %>>
+              <input type="radio" name="choice_a" value="A"><%= question.choice_a %>
+              <input type="radio" name="choice_b" value="B"><%= question.choice_b %>
+              <input type="submit" >
+            </form>
           </li>
           <% end %>
         </ul>
