--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,11 @@
     <title>Questions for Quest. Ons</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    <nav class="navbar navbar-default">
+    
+  </head>
+  <body>
+
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -14,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Questions for Quest. Ons</a>
+      <a class="navbar-brand" href="#">Questions</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,20 +38,19 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-  </head>
-  <body>
     <div class="container">
       <div>
         <ul>
           <% @questions.each do |question|%>
           <li>
-            <%= question.question_text %>
+            <%= question.question_text %><center>
             <form action="/submit" method="post">
               <input type="hidden" name="Question_id" value=<%= question.id %>>
               <input type="radio" name="choice_a" value="A"><%= question.choice_a %>
               <input type="radio" name="choice_b" value="B"><%= question.choice_b %>
               <input type="submit" >
             </form>
+            </center>
           </li>
           <% end %>
         </ul>
