did something to results

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -55,6 +55,11 @@
           </li>
           <% end %>
         </ul>
+        <div class="results">
+        <form action="http://google.com">
+    <input type="submit" value="Take me to Results">
+</form>
+        </div>
       </div>
 
 
