--- a/app/views/result.erb
+++ b/app/views/result.erb
@@ -1,10 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>Results/title>
+    <title>Questions for Quest. Ons</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
-    <nav class="navbar navbar-default">
+    
+  </head>
+  <body>
+
+  <nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -14,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Questions for Quest. Ons</a>
+      <a class="navbar-brand" href="#">Questions</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,8 +26,6 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Create User</a></li>
-        <li class="dropdown">
-        </li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -34,19 +36,20 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-  </head>
-  <body>
     <div class="container">
       <div>
         <ul>
           <% @questions.each do |question|%>
           <li>
+
             <%= question.question_text %>
             <form action="/submit/<%=question.id%>" method="post">
-              <input type="radio" name="choice" value="a"><%= question.choice_a %>
-              <input type="radio" name="choice" value="b"><%= question.choice_b %>
+              <input type="hidden" name="Question_id" value=<%= question.id %>>
+              <input type="radio" name="choice" value="a"><%= question.choice_a_amount %>
+              <input type="radio" name="choice" value="b"><%= question.choice_b_amount %>
               <input type="submit" >
             </form>
+            </center>
           </li>
           <% end %>
         </ul>
@@ -59,3 +62,4 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
 </html>
+
