--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -51,6 +51,7 @@
               <input type="radio" name="choice" value="b"><%= question.choice_b %>
               <input type="submit" >
             </form>
+            <a href = "result/<%= question.id %>"> <button> view results </button> </a>
             </center>
           </li>
           <% end %>
